--- a/css.css
+++ b/css.css
@@ -1,6 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
 #cssmenu {
-  background: gold;
   width: auto;
 }
 #cssmenu ul {
@@ -47,7 +46,7 @@
   transition: color .25s;
 }
 #cssmenu ul li a:hover {
-  color: #333333;
+  color: gold;
 }
 #cssmenu ul li a:hover:before {
   width: 100%;
@@ -121,8 +120,12 @@
 	color:white;
 	font-style:italic;
 }
-* {
-	background-color:gold;
+html { 
+  background: url("http://i.imgur.com/KxrJgJT.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 #logo {
 	width:75%;
@@ -134,11 +137,14 @@
 #about {
 	text-align:center;
 	font-family:'Open Sans';
-	font-size:2em;
+	font-size:5em;
+	-webkit-text-stroke: 1px black;
 	padding-top:1em;
+	color:white;
 }
 #aboutp {
 	text-align:center;
+	color:white;
 	font-family:'Open Sans';
 	padding:2em;
 }
