Fixed Local Image

--- a/css.css
+++ b/css.css
@@ -121,7 +121,7 @@
 	font-style:italic;
 }
 html { 
-  background: url("http://i.imgur.com/KxrJgJT.jpg") no-repeat center center fixed; 
+  background: url("background.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
