--- a/css.css
+++ b/css.css
@@ -59,8 +59,8 @@
   top: 19px;
   height: 6px;
   width: 6px;
-  background: gold;
-  opacity: .5;
+  background: #EA7AF0;
+  opacity: .75;
 }
 #cssmenu ul li a:before {
   content: "";
@@ -70,7 +70,7 @@
   bottom: 0;
   height: 3px;
   width: 0;
-  background: #333333;
+  background: white;
   -webkit-transition: width .25s;
   -moz-transition: width .25s;
   -ms-transition: width .25s;
