--- a/css.css
+++ b/css.css
@@ -148,3 +148,15 @@ html {
 	font-family:'Open Sans';
 	padding:2em;
 }
+.shit {
+    display:inline-block;
+    float:left;
+}
+#price {
+    font-family:Comic Sans MS;
+    color: white;
+}
+#pic {
+    width:20px;
+    height:auto;
+}
